# gw_analysis_tools

./: .buildinfo  .gitignore  CMakeCache.txt  CMakeLists.txt  D__Z__Config_8h.html  D__Z__Config_8h__dep__incl.dot  D__Z__Config_8h_source.html  D__Z__Config__modified__dispersion_8h.html  D__Z__Config__modified__dispersion_8h__dep__incl.dot  D__Z__Config__modified__dispersion_8h_source.html  Doxyfile  EA__IMRPhenomD__NRT_8cpp.html  EA__IMRPhenomD__NRT_8cpp__incl.dot  EA__IMRPhenomD__NRT_8h.html  EA__IMRPhenomD__NRT_8h__dep__incl.dot  EA__IMRPhenomD__NRT_8h__incl.dot  EA__IMRPhenomD__NRT_8h_source.html  IMRPhenomD_8cpp.html  IMRPhenomD_8cpp__incl.dot  IMRPhenomD_8h.html  IMRPhenomD_8h__dep__incl.dot  IMRPhenomD_8h__incl.dot  IMRPhenomD_8h_source.html  IMRPhenomD__NRT_8cpp.html  IMRPhenomD__NRT_8cpp__incl.dot  IMRPhenomD__NRT_8h.html  IMRPhenomD__NRT_8h__dep__incl.dot  IMRPhenomD__NRT_8h__incl.dot  IMRPhenomD__NRT_8h_source.html  IMRPhenomP_8cpp.html  IMRPhenomP_8cpp__incl.dot  IMRPhenomP_8h.html  IMRPhenomP_8h__dep__incl.dot  IMRPhenomP_8h__incl.dot  IMRPhenomP_8h_source.html  IMRPhenomP__NRT_8cpp.html  IMRPhenomP__NRT_8cpp__incl.dot  IMRPhenomP__NRT_8h.html  IMRPhenomP__NRT_8h__dep__incl.dot  IMRPhenomP__NRT_8h__incl.dot  (+545 more)
_sources/: index.rst.txt
api/: D_Z_Config.html  D_Z_Config_modified_dispersion.html  EA_IMRPhenomD_NRT.html  IMRPhenomD.html  IMRPhenomD_NRT.html  IMRPhenomP.html  IMRPhenomP_NRT.html  QNM_data.html  TaylorT2.html  autocorrelation.html  autocorrelation_cuda.html  detector_util.html  fisher.html  gIMRPhenomD.html  gIMRPhenomP.html  gwatpy_wrapping.html  index.html  io_util.html  mc_reject.html  mcmc_gw.html  mcmc_gw_extended.html  mcmc_io_util.html  mcmc_sampler.html  mcmc_sampler_internals.html  ortho_basis.html  pn_waveform_util.html  ppE_IMRPhenomD.html  ppE_IMRPhenomD_NRT.html  ppE_IMRPhenomP.html  ppE_utilities.html  standardPriorLibrary.html  threadPool.html  util.html  waveform_generator.html  waveform_generator_C.html  waveform_util.html
apps/: CMakeLists.txt  Makefile  autocorr_tool.cpp  cmake_install.cmake  create_gw_init_file.cpp  fisher_tool.cpp  mcmc_gw_tool.cpp  mcmc_gw_tool_basic.cpp  mcmc_gw_tool_v2.cpp  rjmcmc_gw_tool_2wf.cpp  waveform_tool.cpp
data/: .adolcrc  CMakeLists.txt  Config_template.txt  D_Z_config.py  IMRPhenomDParameters_Mathematica.csv  IMRPhenomD_CFORM.csv  Makefile  Pw_HLV.csv  Pw_HLVK.csv  Pw_three.csv  cmake_install.cmake  config.txt  plot_noise.py  sample_init_pos.csv  sample_init_pos_Pv2_int170608.csv  table_output.nb
docker_files/: Dockerfile  Dockerfile.gwat.bayesship  runscript.sh
docs/: CMakeLists.txt  D__Z__Config_8h.html  D__Z__Config_8h__dep__incl.map  D__Z__Config_8h__dep__incl.md5  D__Z__Config_8h_source.html  Doxyfile.in  GWATConfig_8h.html  GWATConfig_8h__dep__incl.map  GWATConfig_8h__dep__incl.md5  GWATConfig_8h_source.html  IMRPhenomD_8cpp.html  IMRPhenomD_8cpp__incl.dot  IMRPhenomD_8cpp__incl.map  IMRPhenomD_8cpp__incl.md5  IMRPhenomD_8h.html  IMRPhenomD_8h__dep__incl.map  IMRPhenomD_8h__dep__incl.md5  IMRPhenomD_8h__incl.map  IMRPhenomD_8h__incl.md5  IMRPhenomD_8h_source.html  IMRPhenomP_8cpp.html  IMRPhenomP_8cpp__incl.dot  IMRPhenomP_8cpp__incl.map  IMRPhenomP_8cpp__incl.md5  IMRPhenomP_8h.html  IMRPhenomP_8h__dep__incl.dot  IMRPhenomP_8h__dep__incl.map  IMRPhenomP_8h__dep__incl.md5  IMRPhenomP_8h__incl.map  IMRPhenomP_8h__incl.md5  IMRPhenomP_8h_source.html  QNM__data_8h.html  QNM__data_8h__dep__incl.map  QNM__data_8h__dep__incl.md5  QNM__data_8h_source.html  README.dox  README.md  README.save  README_8dox.html  annotated.html  (+442 more)
docs_sphinx/: Doxyfile.in  conf.py  index.rst
examples/: .gitignore
extraDocs/: jupyterDocker.html
gw_analysis_tools_py/: makefile  setup.py
gwatpy/: gwat_rc  gwatpy_plot.py  makefile  plot_waveform_file.py  setup.py  test.py  test_rc.py
gwatpy_archive/: gwatpy_plot.py  makefile  plot_waveform_file.py  (+1 more)
src/: CMakeLists.txt  EA_IMRPhenomD_NRT.cpp  IMRPhenomD.cpp  IMRPhenomD_NRT.cpp  IMRPhenomP.cpp  IMRPhenomP_NRT.cpp  IMRPhenomPv3.cpp  IMRPhenomPv3utils.cpp  Makefile  TaylorT2.cpp  adaptivelikelihoods.cpp  autocorrelation.cpp  autocorrelation_cuda.cu  cmake_install.cmake  cuda_utilities.cu  detector_util.cpp  error.cpp  fisher.cpp  gIMRPhenomD.cpp  gIMRPhenomP.cpp  gwatpy_wrapping.cpp  io_util.cpp  mc_reject.cpp  mcmc_gw.cpp  mcmc_gw_extended.cpp  mcmc_gw_tool.cpp  mcmc_io_util.cpp  mcmc_routines.cpp  mcmc_routines_ext.cpp  mcmc_sampler.cpp  mcmc_sampler_internals.cpp  noise_util.cpp  ortho_basis.cpp  pn_waveform_util.cpp  ppE_IMRPhenomD.cpp  ppE_IMRPhenomD_NRT.cpp  ppE_IMRPhenomP.cpp  ppE_utilities.cpp  psd_estimation.cpp  quadrature.cpp  (+7 more)
tests/: CMakeLists.txt  makefile  makefile_archive  makefile_test_injection_2  maketest.mk  maketest_copy.mk  noise_curve.csv  plot_sys_err_graphs.ipynb  stat_err_data.csv  sys_err_data.csv
tests/data/binLove/: binLove_50.csv  binLove_75.csv  binLove_90.csv  binaryLove.csv  q05_fit.csv  q075_fit.csv  q09_fit.csv
tests/data/uniform/case1/: EA_coupling_constants.csv
tests/mathematica/: MCMC_sampler_checks.nb
tests/python/: EA_CLove_S_tests.py  EA_GR_match_calc.py  EA_credible_regions.py  EA_parameter_MC.py  NRT_binLove_tests.py  PTRJMCMC_view.py  Untitled.ipynb  ac.py  ac_testing.py  bayesline_post.py  bilby_test.py  compare_MD_cosmology.py  compare_PNSeries.py  compare_annealing.py  compare_ensemble_sizes.ipynb  compare_responses.py  compare_wf.py  convergence.py  convergence_diagnostics.ipynb  create_NSBH_data.py  emcee_comparison.py  injection_template.cpp  multi_gaussian_bilby.py  multi_gaussian_emcee.py  plot_1d.py  plot_EA.py  plot_RJ_sin.py  plot_TBM.py  plot_bayesogram.py  plot_chains.py  plot_data_mcmc.py  plot_emcee.py  plot_fisher_waveform.py  plot_integrand_bounds.py  plot_ll.py  plot_mcmc.py  plot_mcmc_RJ.py  plot_multi_gaussian.py  plot_multi_gaussian_both.py  plot_observation_bounds.py  (+19 more)
tests/src/: injection_template.cpp  test_SNR.cpp  test_cosmology.cpp  test_errors.cpp  test_fishers.cpp  test_mcmc.cpp  test_psd_estimation.cpp  test_response_functions.cpp  test_util.cpp  test_waveform.cpp  test_waveform_util.cpp
(+1935 files in other folders)
