add_executable(waveform_tool "waveform_tool.cpp")
set_target_properties(waveform_tool PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
target_link_libraries(waveform_tool PUBLIC gwat)
target_link_libraries( waveform_tool PUBLIC "${HDF5_LIBRARIES}" OpenMP::OpenMP_CXX "${ADOLC_LIBRARIES}" "${FFTW3_LIBRARIES}" "${GSL_LIBRARIES}")
target_include_directories( waveform_tool PUBLIC "${PROJECT_SOURCE_DIR}/include")
target_include_directories( waveform_tool PUBLIC "${OpenMP_INCLUDE_DIR}" "${ADOLC_INCLUDE_DIR}" "${HDF5_INCLUDE_DIR}" "${FFTW3_INCLUDE_DIR}" "${GSL_INCLUDE_DIR}")

add_executable(mcmc_gw_tool "mcmc_gw_tool.cpp")
set_target_properties(mcmc_gw_tool PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
target_link_libraries(mcmc_gw_tool PUBLIC gwat)
target_link_libraries( mcmc_gw_tool PUBLIC "${HDF5_LIBRARIES}" OpenMP::OpenMP_CXX "${ADOLC_LIBRARIES}" "${FFTW3_LIBRARIES}" "${GSL_LIBRARIES}")
target_include_directories( mcmc_gw_tool PUBLIC "${PROJECT_SOURCE_DIR}/include")
target_include_directories( mcmc_gw_tool PUBLIC "${OpenMP_INCLUDE_DIR}" "${ADOLC_INCLUDE_DIR}" "${HDF5_INCLUDE_DIR}" "${FFTW3_INCLUDE_DIR}" "${GSL_INCLUDE_DIR}")

add_executable(fisher_tool "fisher_tool.cpp")
set_target_properties(fisher_tool PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
target_link_libraries(fisher_tool PUBLIC gwat)
target_link_libraries( fisher_tool PUBLIC "${HDF5_LIBRARIES}" OpenMP::OpenMP_CXX "${ADOLC_LIBRARIES}" "${FFTW3_LIBRARIES}" "${GSL_LIBRARIES}")
target_include_directories( fisher_tool PUBLIC "${PROJECT_SOURCE_DIR}/include")
target_include_directories( fisher_tool PUBLIC "${OpenMP_INCLUDE_DIR}" "${ADOLC_INCLUDE_DIR}" "${HDF5_INCLUDE_DIR}" "${FFTW3_INCLUDE_DIR}" "${GSL_INCLUDE_DIR}")

add_executable(autocorr_tool "autocorr_tool.cpp")
set_target_properties(autocorr_tool PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
target_link_libraries(autocorr_tool PUBLIC gwat)
target_link_libraries( autocorr_tool PUBLIC "${HDF5_LIBRARIES}" OpenMP::OpenMP_CXX "${ADOLC_LIBRARIES}" "${FFTW3_LIBRARIES}" "${GSL_LIBRARIES}")
target_include_directories( autocorr_tool PUBLIC "${PROJECT_SOURCE_DIR}/include")
target_include_directories( autocorr_tool PUBLIC "${OpenMP_INCLUDE_DIR}" "${ADOLC_INCLUDE_DIR}" "${HDF5_INCLUDE_DIR}" "${FFTW3_INCLUDE_DIR}" "${GSL_INCLUDE_DIR}")

install(TARGETS waveform_tool DESTINATION bin)
install(TARGETS mcmc_gw_tool DESTINATION bin)
install(TARGETS autocorr_tool DESTINATION bin)
install(TARGETS fisher_tool DESTINATION bin)
